--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
 
-  <title>Ema's Sandales</title>
+  <title>Ema's Sandals</title>
 </head>
 
 <body>
